# home-buddy

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.playwright-mcp/: page-2026-06-19T05-58-21-705Z.yml  page-2026-06-19T05-58-38-450Z.yml  page-2026-06-19T06-02-48-270Z.yml
scripts/: make-runner.mjs  png.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/onboarding/: Onboarding.tsx
src/components/popover/: CharacterFace.tsx  Countdown.tsx  Popover.tsx  ProgressBar.tsx
src/components/settings/: CharacterPicker.tsx  Controls.tsx  Field.tsx  ManualForm.tsx  ReferenceUrlField.tsx  SettingsPanel.tsx  TrayFormatSection.tsx
src/components/ui/: icons.tsx
src/hooks/: useAttendance.ts  useAutoResize.ts  useNow.ts  useReminders.ts  useRunner.ts
src/services/: notifications.ts  opener.ts  runner.ts  settings.ts  tauri.ts  tray.ts  window.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: character.ts  messages.ts  schedule.test.ts  schedule.ts  status.test.ts  status.ts  time.test.ts  time.ts  trayTitle.test.ts  trayTitle.ts
